--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
     "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "html-react-parser": "^4.2.0",
