--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.4",
-    "sass": "^1.64.1"
+    "sass": "^1.64.1",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "eslint": "8.46.0",
