--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "sharp": "^0.32.4"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.80",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "tailwindcss": "^3.3.3"
