--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.4",
     "sass": "^1.64.1",
     "sharp": "^0.32.4"
